oracle/baikal/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baikal-deployment
  namespace: baikal
  annotations:
    argocd-image-updater.argoproj.io/image-list: ckulka/baikal
    argocd-image-updater.argoproj.io/update-strategy: latest
    argocd-image-updater.argoproj.io/tag: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: baikal
  template:
    metadata:
      labels:
        app: baikal
    spec:
      containers:
        - name: baikal
          image: ckulka/baikal:nginx
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - name: baikal-config
              mountPath: /var/www/baikal/config
            - name: baikal-data
              mountPath: /var/www/baikal/Specific
      restartPolicy: Always
      volumes:
        - name: baikal-config
          persistentVolumeClaim:
            claimName: baikal-config-pvc
        - name: baikal-data
          persistentVolumeClaim:
            claimName: baikal-data-pvc
